// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > calls onClick handler when clicked 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid itsa-btn itsa-btn--md itsa-btn--primary"
    type="button"
  >
    <span
      class="block w-full overflow-hidden text-ellipsis whitespace-nowrap"
    >
      Click
    </span>
  </button>
</div>
`;

exports[`Button component > passes props to AntButton 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid itsa-btn itsa-btn--md itsa-btn--primary"
    type="button"
  >
    <span
      class="block w-full overflow-hidden text-ellipsis whitespace-nowrap"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`Button component > renders disabled button 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid itsa-btn itsa-btn--md itsa-btn--primary itsa-btn--disabled rounded-[12px]"
    disabled=""
    type="button"
  >
    <span
      class="block w-full overflow-hidden text-ellipsis whitespace-nowrap"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Button component > renders label text 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid itsa-btn itsa-btn--md itsa-btn--primary"
    type="button"
  >
    <span
      class="block w-full overflow-hidden text-ellipsis whitespace-nowrap"
    >
      Click me
    </span>
  </button>
</div>
`;
